# AutoDraft_

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  test_suite.py
docs/: architecture.md  pipeline.md
docs/modules/: api.md  bm25_retriever.md  chunker.md  company_ingest.md  company_vectordb.md  llm_api.md  output_writer.md  parent_store.md  pdf_parser.md  query_processor.md  rag_chain.md  reranker.md  summary_service.md  vector_db.md
docs/worklog/: 2026_03_17.md  2026_03_18.md  2026_03_19.md
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
src/: api.py  bm25_retriever.py  chunker.py  company_ingest.py  company_vectordb.py  image_parser.py  llm_api.py  output_writer.py  parent_store.py  parser.py  pdf_parser.py  query_processor.py  rag_chain.py  reranker.py  summary_service.py  vector_db.py
tests/: threshold_experiment.py
